quiz-form styling completed

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ body{
     background-color: var(--primary-color);
     color: var(--light-grey);
     border: none;
+    margin-top: 1rem;
 }
 
 /*Footer*/
